# CLion-Taller2-Daniel-Diaz-Javier-Gripe

./: CMakeLists.txt  main.cpp
Files/: barcos.txt  jugadores.txt  piezas.txt
Model/: Barco.cpp  Barco.h  Jugador.cpp  Jugador.h  Pieza.cpp  Pieza.h
Model/Contenedores/: ListaCircularSimple.cpp  ListaCircularSimple.h  ListaSimple.h  ListaSimple.tpp  MPP.cpp  MPP.h  NodoMPP.cpp  NodoMPP.h  NodoSimple.h  NodoSimple.tpp
Service/: Sistema.cpp  Sistema.h
